# karnage-demo

./: Cargo.toml  Cross.toml  README.md
.github/workflows/: build.yml
karnage/: Cargo.toml  index.html
karnage/src/: app.rs  karnage.rs  main.rs
karnage/src/audio/: mod.rs  processors.rs
karnage/src/gfx/: mod.rs
karnage/src/gfx/scenes/: fade.rs  intro.rs  mod.rs  oscilloscope.rs  scene_4.rs  scene_5.rs  speech.rs  twistscroller.rs
karnage/src/gfx/shaders/: alien.wgsl  intro.wgsl  oscilloscope.wgsl  scene_2.wgsl  scene_3.wgsl  scene_4.wgsl  scene_5.wgsl  tesseract.wgsl  twistscroller.wgsl
